--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.23.0",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-icons": "^4.3.1",
+    "socket.io-client": "^4.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
